Logistics - v09 - added branch for security configuration
