# src/main/java/com/tsystems/logistics/logistics_vp/validator/AuthenticationInfoValidator.java
@@ -18,7 +18,7 @@ public class AuthenticationInfoValidator extends ValidatorPatterns implements Va
         AuthenticationInfoDto authenticationInfoDto = (AuthenticationInfoDto) object;
 
         Integer id = authenticationInfoDto.getId();
-        String login = authenticationInfoDto.getLogin();
+        String username = authenticationInfoDto.getUsername();
 
         if (id == null) {
             errors.rejectValue("id", "INCORRECT_ID_PATTERN",
@@ -29,13 +29,13 @@ public class AuthenticationInfoValidator extends ValidatorPatterns implements Va
                         "Authentication Info id should not exceed 6 digits");
             }
         }
-        if (!login.toString().matches(LOGIN_PATTERN)) {
-            errors.rejectValue("id", "INCORRECT_LOGIN_PATTERN",
-                    "Authentication Info login can contain only letters, digits and underscores");
+        if (!username.toString().matches(USERNAME_PATTERN)) {
+            errors.rejectValue("id", "INCORRECT_USERNAME_PATTERN",
+                    "Authentication Info username can contain only letters, digits and underscores");
         }
-        if (login.toString().length() > 30) {
+        if (username.toString().length() > 30) {
             errors.rejectValue("id", "INCORRECT_LOGIN",
-                    "Authentication Info login should not exceed 40 symbols");
+                    "Authentication Info username should not exceed 30 symbols");
         }
     }
 }
